# BInfKill

Test/: README.md
binfkill-client-console/: package-lock.json  package.json
binfkill-server/: main.py  pyproject.toml
